# product

./: compose.yaml
consumer/: Dockerfile  pyproject.toml
consumer/app/: main.py
productservices/: pyproject.toml  test.db
productservices/app/: db.py  main.py  model.py
