[tool.poetry]
name = "consumer"
version = "0.1.0"
description = ""
authors = ["Sara Murtaza <gm776446@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
unicorn = "^2.1.1"
pytest = "^8.3.3"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
psycopg2 = "^2.9.10"
aiokafka = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
